product/gradle-plugin/src/test/python/static_proxy/data/errors/conditional.py
from java import *


if True:
    class NoBases(static_proxy(None)):
        pass
